--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__/config.cpython-310.pyc
 scash_data.db
 tempCodeRunnerFile.py
 scash_data.db-journal
+config.py
+__pycache__/config.cpython-38.pyc
+assets/dashboard_data.js
